--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-.container {
+.container1 {
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 button,
